y.output
Terminals unused in grammar

    LBRACK
    RBRACK
    ARRAY


State 91 conflicts: 12 shift/reduce
State 117 conflicts: 2 shift/reduce
State 143 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decs

    2 decs: declare
    3     | funcDec
    4     | declare decs
    5     | funcDec decs

    6 exp: INT
    7    | STRING
    8    | REAL
    9    | NUL
   10    | TRUEE
   11    | FALSEE
   12    | lvalue
   13    | assignExp
   14    | exp PLUS exp
   15    | exp MINUS exp
   16    | exp TIMES exp
   17    | exp DIVIDE exp
   18    | MINUS exp
   19    | exp EQ exp
   20    | exp NEQ exp
   21    | exp GE exp
   22    | exp GT exp
   23    | exp LE exp
   24    | exp LT exp
   25    | id LPAREN explist RPAREN
   26    | LPAREN exp RPAREN
   27    | exp AND exp
   28    | exp OR exp

   29 assignExp: lvalue ASSIGN exp

   30 stm: funcDec
   31    | funcCall SEMICOLON
   32    | assign SEMICOLON
   33    | declare
   34    | if
   35    | while
   36    | for
   37    | return SEMICOLON
   38    | BREAK SEMICOLON
   39    | CONTINUE SEMICOLON
   40    | LBRACE stmlist RBRACE

   41 stmlist: stm
   42        | stm stmlist

   43 return: LPAREN exp RPAREN RETURN

   44 type: id
   45     | VOID
   46     | INTTYPE
   47     | STRINGTYPE
   48     | REALTYPE
   49     | BOOLEAN

   50 tyfield: %empty
   51        | tyfield1

   52 tyfield1: type COLON id
   53         | type COLON id COMMA tyfield1

   54 funcDec: type COLON id LPAREN tyfield RPAREN ASSIGN stm

   55 funcCall: id LPAREN RPAREN
   56         | id LPAREN explist RPAREN

   57 assign: lvalue ASSIGN exp
   58       | lvalue PLUS PLUS
   59       | lvalue MINUS MINUS
   60       | lvalue PLUS ASSIGN exp
   61       | lvalue MINUS ASSIGN exp

   62 declare: type COLON assign SEMICOLON
   63        | type COLON lvalue SEMICOLON
   64        | TYPE COLON id ASSIGN LBRACE tyfield RBRACE SEMICOLON

   65 if: IF LPAREN exp RPAREN THEN stm
   66   | IF LPAREN exp RPAREN THEN stm ELSE stm

   67 while: LPAREN exp RPAREN TO stm

   68 for: LPAREN stm RPAREN FROM LPAREN exp RPAREN TO LPAREN stm RPAREN stm

   69 explist: exp COMMA explist
   70        | exp

   71 id: ID

   72 lvalue: id
   73       | lvalue DOT id


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sval> (258) 71
    STRING <sval> (259) 7
    INT <ival> (260) 6
    REAL <fval> (261) 8
    COMMA (262) 53 69
    COLON (263) 52 53 54 62 63 64
    SEMICOLON (264) 31 32 37 38 39 62 63 64
    LPAREN (265) 25 26 43 54 55 56 65 66 67 68
    RPAREN (266) 25 26 43 54 55 56 65 66 67 68
    LBRACK (267)
    RBRACK (268)
    LBRACE (269) 40 64
    RBRACE (270) 40 64
    DOT (271) 73
    PLUS (272) 14 58 60
    MINUS (273) 15 18 59 61
    TIMES (274) 16
    DIVIDE (275) 17
    EQ (276) 19
    NEQ (277) 20
    LT (278) 24
    LE (279) 23
    GT (280) 22
    GE (281) 21
    AND (282) 27
    OR (283) 28
    ASSIGN (284) 29 54 57 60 61 64
    ARRAY (285)
    IF (286) 65 66
    THEN (287) 65 66
    ELSE (288) 66
    FROM (289) 68
    TO (290) 67 68
    BREAK (291) 38
    INTTYPE (292) 46
    STRINGTYPE (293) 47
    REALTYPE (294) 48
    CONTINUE (295) 39
    RETURN (296) 43
    TYPE (297) 64
    VOID (298) 45
    NUL (299) 9
    TRUEE (300) 10
    FALSEE (301) 11
    BOOLEAN (302) 49
    UMINUS (303)
    LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program (51)
        on left: 1
        on right: 0
    decs <decList> (52)
        on left: 2 3 4 5
        on right: 1 4 5
    exp <exp> (53)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 14 15 16 17 18 19 20 21 22 23 24 26 27 28 29 43 57 60 61 65 66 67 68 69 70
    assignExp <exp> (54)
        on left: 29
        on right: 13
    stm <stm> (55)
        on left: 30 31 32 33 34 35 36 37 38 39 40
        on right: 41 42 54 65 66 67 68
    stmlist <stmList> (56)
        on left: 41 42
        on right: 40 42
    return <stm> (57)
        on left: 43
        on right: 37
    type <type> (58)
        on left: 44 45 46 47 48 49
        on right: 52 53 54 62 63
    tyfield <fieldList> (59)
        on left: 50 51
        on right: 54 64
    tyfield1 <fieldList> (60)
        on left: 52 53
        on right: 51 53
    funcDec <dec> (61)
        on left: 54
        on right: 3 5 30
    funcCall <stm> (62)
        on left: 55 56
        on right: 31
    assign <stm> (63)
        on left: 57 58 59 60 61
        on right: 32 62
    declare <dec> (64)
        on left: 62 63 64
        on right: 2 4 33
    if <stm> (65)
        on left: 65 66
        on right: 34
    while <stm> (66)
        on left: 67
        on right: 35
    for <stm> (67)
        on left: 68
        on right: 36
    explist <expList> (68)
        on left: 69 70
        on right: 25 56 69
    id <sym> (69)
        on left: 71
        on right: 25 44 52 53 54 55 56 64 72 73
    lvalue <var> (70)
        on left: 72 73
        on right: 12 29 57 58 59 60 61 63 73


State 0

    0 $accept: . program $end

    ID          shift, and go to state 1
    INTTYPE     shift, and go to state 2
    STRINGTYPE  shift, and go to state 3
    REALTYPE    shift, and go to state 4
    TYPE        shift, and go to state 5
    VOID        shift, and go to state 6
    BOOLEAN     shift, and go to state 7

    program  go to state 8
    decs     go to state 9
    type     go to state 10
    funcDec  go to state 11
    declare  go to state 12
    id       go to state 13


State 1

   71 id: ID .

    $default  reduce using rule 71 (id)


State 2

   46 type: INTTYPE .

    $default  reduce using rule 46 (type)


State 3

   47 type: STRINGTYPE .

    $default  reduce using rule 47 (type)


State 4

   48 type: REALTYPE .

    $default  reduce using rule 48 (type)


State 5

   64 declare: TYPE . COLON id ASSIGN LBRACE tyfield RBRACE SEMICOLON

    COLON  shift, and go to state 14


State 6

   45 type: VOID .

    $default  reduce using rule 45 (type)


State 7

   49 type: BOOLEAN .

    $default  reduce using rule 49 (type)


State 8

    0 $accept: program . $end

    $end  shift, and go to state 15


State 9

    1 program: decs .

    $default  reduce using rule 1 (program)


State 10

   54 funcDec: type . COLON id LPAREN tyfield RPAREN ASSIGN stm
   62 declare: type . COLON assign SEMICOLON
   63        | type . COLON lvalue SEMICOLON

    COLON  shift, and go to state 16


State 11

    3 decs: funcDec .
    5     | funcDec . decs

    ID          shift, and go to state 1
    INTTYPE     shift, and go to state 2
    STRINGTYPE  shift, and go to state 3
    REALTYPE    shift, and go to state 4
    TYPE        shift, and go to state 5
    VOID        shift, and go to state 6
    BOOLEAN     shift, and go to state 7

    $default  reduce using rule 3 (decs)

    decs     go to state 17
    type     go to state 10
    funcDec  go to state 11
    declare  go to state 12
    id       go to state 13


State 12

    2 decs: declare .
    4     | declare . decs

    ID          shift, and go to state 1
    INTTYPE     shift, and go to state 2
    STRINGTYPE  shift, and go to state 3
    REALTYPE    shift, and go to state 4
    TYPE        shift, and go to state 5
    VOID        shift, and go to state 6
    BOOLEAN     shift, and go to state 7

    $default  reduce using rule 2 (decs)

    decs     go to state 18
    type     go to state 10
    funcDec  go to state 11
    declare  go to state 12
    id       go to state 13


State 13

   44 type: id .

    $default  reduce using rule 44 (type)


State 14

   64 declare: TYPE COLON . id ASSIGN LBRACE tyfield RBRACE SEMICOLON

    ID  shift, and go to state 1

    id  go to state 19


State 15

    0 $accept: program $end .

    $default  accept


State 16

   54 funcDec: type COLON . id LPAREN tyfield RPAREN ASSIGN stm
   62 declare: type COLON . assign SEMICOLON
   63        | type COLON . lvalue SEMICOLON

    ID  shift, and go to state 1

    assign  go to state 20
    id      go to state 21
    lvalue  go to state 22


State 17

    5 decs: funcDec decs .

    $default  reduce using rule 5 (decs)


State 18

    4 decs: declare decs .

    $default  reduce using rule 4 (decs)


State 19

   64 declare: TYPE COLON id . ASSIGN LBRACE tyfield RBRACE SEMICOLON

    ASSIGN  shift, and go to state 23


State 20

   62 declare: type COLON assign . SEMICOLON

    SEMICOLON  shift, and go to state 24


State 21

   54 funcDec: type COLON id . LPAREN tyfield RPAREN ASSIGN stm
   72 lvalue: id .

    LPAREN  shift, and go to state 25

    $default  reduce using rule 72 (lvalue)


State 22

   57 assign: lvalue . ASSIGN exp
   58       | lvalue . PLUS PLUS
   59       | lvalue . MINUS MINUS
   60       | lvalue . PLUS ASSIGN exp
   61       | lvalue . MINUS ASSIGN exp
   63 declare: type COLON lvalue . SEMICOLON
   73 lvalue: lvalue . DOT id

    SEMICOLON  shift, and go to state 26
    DOT        shift, and go to state 27
    PLUS       shift, and go to state 28
    MINUS      shift, and go to state 29
    ASSIGN     shift, and go to state 30


State 23

   64 declare: TYPE COLON id ASSIGN . LBRACE tyfield RBRACE SEMICOLON

    LBRACE  shift, and go to state 31


State 24

   62 declare: type COLON assign SEMICOLON .

    $default  reduce using rule 62 (declare)


State 25

   54 funcDec: type COLON id LPAREN . tyfield RPAREN ASSIGN stm

    ID          shift, and go to state 1
    INTTYPE     shift, and go to state 2
    STRINGTYPE  shift, and go to state 3
    REALTYPE    shift, and go to state 4
    VOID        shift, and go to state 6
    BOOLEAN     shift, and go to state 7

    $default  reduce using rule 50 (tyfield)

    type      go to state 32
    tyfield   go to state 33
    tyfield1  go to state 34
    id        go to state 13


State 26

   63 declare: type COLON lvalue SEMICOLON .

    $default  reduce using rule 63 (declare)


State 27

   73 lvalue: lvalue DOT . id

    ID  shift, and go to state 1

    id  go to state 35


State 28

   58 assign: lvalue PLUS . PLUS
   60       | lvalue PLUS . ASSIGN exp

    PLUS    shift, and go to state 36
    ASSIGN  shift, and go to state 37


State 29

   59 assign: lvalue MINUS . MINUS
   61       | lvalue MINUS . ASSIGN exp

    MINUS   shift, and go to state 38
    ASSIGN  shift, and go to state 39


State 30

   57 assign: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 48
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 31

   64 declare: TYPE COLON id ASSIGN LBRACE . tyfield RBRACE SEMICOLON

    ID          shift, and go to state 1
    INTTYPE     shift, and go to state 2
    STRINGTYPE  shift, and go to state 3
    REALTYPE    shift, and go to state 4
    VOID        shift, and go to state 6
    BOOLEAN     shift, and go to state 7

    $default  reduce using rule 50 (tyfield)

    type      go to state 32
    tyfield   go to state 52
    tyfield1  go to state 34
    id        go to state 13


State 32

   52 tyfield1: type . COLON id
   53         | type . COLON id COMMA tyfield1

    COLON  shift, and go to state 53


State 33

   54 funcDec: type COLON id LPAREN tyfield . RPAREN ASSIGN stm

    RPAREN  shift, and go to state 54


State 34

   51 tyfield: tyfield1 .

    $default  reduce using rule 51 (tyfield)


State 35

   73 lvalue: lvalue DOT id .

    $default  reduce using rule 73 (lvalue)


State 36

   58 assign: lvalue PLUS PLUS .

    $default  reduce using rule 58 (assign)


State 37

   60 assign: lvalue PLUS ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 55
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 38

   59 assign: lvalue MINUS MINUS .

    $default  reduce using rule 59 (assign)


State 39

   61 assign: lvalue MINUS ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 56
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 40

    7 exp: STRING .

    $default  reduce using rule 7 (exp)


State 41

    6 exp: INT .

    $default  reduce using rule 6 (exp)


State 42

    8 exp: REAL .

    $default  reduce using rule 8 (exp)


State 43

   26 exp: LPAREN . exp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 57
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 44

   18 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 58
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 45

    9 exp: NUL .

    $default  reduce using rule 9 (exp)


State 46

   10 exp: TRUEE .

    $default  reduce using rule 10 (exp)


State 47

   11 exp: FALSEE .

    $default  reduce using rule 11 (exp)


State 48

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   19    | exp . EQ exp
   20    | exp . NEQ exp
   21    | exp . GE exp
   22    | exp . GT exp
   23    | exp . LE exp
   24    | exp . LT exp
   27    | exp . AND exp
   28    | exp . OR exp
   57 assign: lvalue ASSIGN exp .

    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62
    EQ      shift, and go to state 63
    NEQ     shift, and go to state 64
    LT      shift, and go to state 65
    LE      shift, and go to state 66
    GT      shift, and go to state 67
    GE      shift, and go to state 68
    AND     shift, and go to state 69
    OR      shift, and go to state 70

    $default  reduce using rule 57 (assign)


State 49

   13 exp: assignExp .

    $default  reduce using rule 13 (exp)


State 50

   25 exp: id . LPAREN explist RPAREN
   72 lvalue: id .

    LPAREN  shift, and go to state 71

    $default  reduce using rule 72 (lvalue)


State 51

   12 exp: lvalue .
   29 assignExp: lvalue . ASSIGN exp
   73 lvalue: lvalue . DOT id

    DOT     shift, and go to state 27
    ASSIGN  shift, and go to state 72

    $default  reduce using rule 12 (exp)


State 52

   64 declare: TYPE COLON id ASSIGN LBRACE tyfield . RBRACE SEMICOLON

    RBRACE  shift, and go to state 73


State 53

   52 tyfield1: type COLON . id
   53         | type COLON . id COMMA tyfield1

    ID  shift, and go to state 1

    id  go to state 74


State 54

   54 funcDec: type COLON id LPAREN tyfield RPAREN . ASSIGN stm

    ASSIGN  shift, and go to state 75


State 55

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   19    | exp . EQ exp
   20    | exp . NEQ exp
   21    | exp . GE exp
   22    | exp . GT exp
   23    | exp . LE exp
   24    | exp . LT exp
   27    | exp . AND exp
   28    | exp . OR exp
   60 assign: lvalue PLUS ASSIGN exp .

    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62
    EQ      shift, and go to state 63
    NEQ     shift, and go to state 64
    LT      shift, and go to state 65
    LE      shift, and go to state 66
    GT      shift, and go to state 67
    GE      shift, and go to state 68
    AND     shift, and go to state 69
    OR      shift, and go to state 70

    $default  reduce using rule 60 (assign)


State 56

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   19    | exp . EQ exp
   20    | exp . NEQ exp
   21    | exp . GE exp
   22    | exp . GT exp
   23    | exp . LE exp
   24    | exp . LT exp
   27    | exp . AND exp
   28    | exp . OR exp
   61 assign: lvalue MINUS ASSIGN exp .

    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62
    EQ      shift, and go to state 63
    NEQ     shift, and go to state 64
    LT      shift, and go to state 65
    LE      shift, and go to state 66
    GT      shift, and go to state 67
    GE      shift, and go to state 68
    AND     shift, and go to state 69
    OR      shift, and go to state 70

    $default  reduce using rule 61 (assign)


State 57

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   19    | exp . EQ exp
   20    | exp . NEQ exp
   21    | exp . GE exp
   22    | exp . GT exp
   23    | exp . LE exp
   24    | exp . LT exp
   26    | LPAREN exp . RPAREN
   27    | exp . AND exp
   28    | exp . OR exp

    RPAREN  shift, and go to state 76
    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62
    EQ      shift, and go to state 63
    NEQ     shift, and go to state 64
    LT      shift, and go to state 65
    LE      shift, and go to state 66
    GT      shift, and go to state 67
    GE      shift, and go to state 68
    AND     shift, and go to state 69
    OR      shift, and go to state 70


State 58

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | MINUS exp .
   19    | exp . EQ exp
   20    | exp . NEQ exp
   21    | exp . GE exp
   22    | exp . GT exp
   23    | exp . LE exp
   24    | exp . LT exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62
    EQ      shift, and go to state 63
    NEQ     shift, and go to state 64
    LT      shift, and go to state 65
    LE      shift, and go to state 66
    GT      shift, and go to state 67
    GE      shift, and go to state 68
    AND     shift, and go to state 69
    OR      shift, and go to state 70

    $default  reduce using rule 18 (exp)


State 59

   14 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 77
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 60

   15 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 78
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 61

   16 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 79
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 62

   17 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 80
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 63

   19 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 81
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 64

   20 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 82
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 65

   24 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 83
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 66

   23 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 84
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 67

   22 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 40
    INT     shift, and go to state 41
    REAL    shift, and go to state 42
    LPAREN  shift, and go to state 43
    MINUS   shift, and go to state 44
    NUL     shift, and go to state 45
    TRUEE   shift, and go to state 46
    FALSEE  shift, and go to state 47

    exp        go to state 85
    assignExp  go to state 49
    id         go to state 50
    lvalue     go to state 51


State 68

   21 exp: exp GE . exp
